# personal-website

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt  start.sh
apps/aboutme/: admin.py  apps.py  models.py  urls.py  views.py
apps/aboutme/migrations/: 0001_initial.py
apps/aboutme/static/aboutme/css/: about_me.css  projects.css
apps/aboutme/static/aboutme/js/: about_me.js
apps/aboutme/templates/aboutme/: about_me.html  project_details.html  projects.html
apps/main/: urls.py  views.py
apps/main/static/main/js/: base.js
apps/main/templates/main/: base.html  footer.html
apps/main/utils/: global_menu.py
static/css/: utils.css
static/js/: utils.js
website/: settings.py  urls.py
