[tool.poetry]
name = "personal-website"
version = "0.1.0"
description = ""
authors = ["Alexis Montejo"]
license = "MIT"
readme = "README.md"
packages = [{include = "website"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.2"
markdown = "^3.4.3"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^20.1.0"
dj-database-url = "^2.0.0"
mysqlclient = "^2.1.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
